# V-rtice

./: .STANDBY_STATUS.md  .bandit  .claude_memory.md  .coverage  .coverage_branch.json  .editorconfig  .env.example  .env.subordinates.example  .flake8  .gcloudignore  .gitignore  .pre-commit-config.yaml  AIR_GAP_BRUTAL_REALITY_CHECK.md  AIR_GAP_EXTINCTION_COMPLETE.md  AIR_GAP_EXTINCTION_PROGRESS.md  AIR_GAP_FINAL_AUDIT.md  ANALISE_COMPLETA_VERTICE_CLI.md  ANALISE_SINESP_SERVICE.md  AUDITORIA_COMPLETA_VERTICE.md  AURORA_2025_STRATEGIC_ROADMAP.md  AURORA_DEPLOYMENT.md  BACKEND_ANALYSIS_INDEX.md  BACKEND_AUDIT_COMPLETE.json  BACKEND_COMPLETE_ANALYSIS.md  BACKEND_COMPREHENSIVE_CONSTITUTIONAL_AUDIT_2025-10-31.md  BACKEND_CONSTITUTIONAL_COMPLIANCE_AUDIT_2025-10-31.md  BACKEND_CORRECTION_PLAN_100.md  BACKEND_COVERAGE_100_ABSOLUTE_STATUS.md  BACKEND_COVERAGE_PROGRESS.md  BACKEND_DIAGNOSTIC_OUTPUT.md  BACKEND_FINAL_REPORT.md  BACKEND_RESURRECTION_STATUS.md  BUG_FIX_REPORT.md  CERTIFICACAO_FASE2_FINAL.md  CHANGELOG.md  CHANGELOG_v2.0.0.md  CHEMICAL_SENSING_SERVICE_SUMMARY.md  COAGULATION_CASCADE_BLUEPRINT.md  COCKPIT_100_CERTIFICATION_REPORT.md  COCKPIT_FASE8_FINAL_STATUS.md  (+234 more)
backend/libs/vertice_api/: .gitignore  coverage.json  coverage_full.json  pyproject.toml
backend/libs/vertice_core/: .gitignore  README.md  coverage.json  pyproject.toml
backend/libs/vertice_db/: .gitignore  README.md  coverage.json  coverage_full.json  pyproject.toml
backend/service_template/: .coverage  README.md  TRACK3_STATUS.md  coverage.json  pyproject.toml
backend/service_template/tests/: conftest.py
backend/services/active_immune_core/: .coveragerc  .cve-whitelist.yml.test  .dockerignore  .env.example  .env.test.example  .gitignore  ACTIVE_IMMUNE_CORE_COMPLETE.md  ACTIVE_IMMUNE_CORE_LEGACY.md  BLUEPRINT_04_IMMUNE_AGENTS_TESTS.md  COVERAGE_META_100_PERCENT.md  COVERAGE_SPRINT_1_REPORT.md  COVERAGE_STATUS.md  COVERAGE_UPDATE_DAY127_EXTENDED.md  DEFENSIVE_AI_SPRINT_1_COMPLETE.md  DEFENSIVE_AI_STATUS_FINAL.md  DEFENSIVE_CORE_100PCT_STATUS.md  DEPENDENCY_DRIFT_ELIMINATION_REPORT.md  DEPENDENCY_EMERGENCY_RUNBOOK.md  DEPENDENCY_GOVERNANCE_IMPLEMENTATION_REPORT.md  DEPENDENCY_POLICY.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.dev.old  Dockerfile.old  ECOSYSTEM_MAP.md  FASE_10_ANALYSIS.md  FASE_10_COMPLETE.md  FASE_11_2_CLIENTS_COMPLETE.md  FASE_11_3_KAFKA_INTEGRATION_COMPLETE.md  FASE_11_4_API_GATEWAY_COMPLETE.md  FASE_11_ANALISE_SERVICOS.md  FASE_11_INTEGRATION_COMPLETE.md  FASE_12_DEPLOYMENT_COMPLETE.md  FASE_13_COMPLETE.md  FASE_1_COMPLETE.md  FASE_2_API_INTEGRATION_COMPLETE.md  FASE_2_COMPLETE.md  FASE_3_100_PERCENT_COMPLETE.md  FASE_3_AUDITORIA.md  (+73 more)
backend/services/ai_immune_system/: .env.example  Dockerfile  Dockerfile.old  Makefile  README.md  __init__.py  adaptive_learning.py  api.py  circuit_breaker.py  consensus_validator.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/services/auditory_cortex_service/: .coverage  .env.example  Dockerfile  Dockerfile.old  Makefile  README.md  __init__.py  api.py  binaural_correlation.py  c2_beacon_detector.py  cocktail_party_triage.py  coverage.xml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ttp_signature_recognition.py
backend/services/command_bus_service/: .coverage  .coverage.json  Dockerfile  README.md  __init__.py  audit_repository.py  c2l_executor.py  config.py  coverage.json  coverage_c2l.json  coverage_command_phase8.json  coverage_final.json  docker-compose.yml  health_api.py  kill_switch.py  main.py  models.py  nats_publisher.py  nats_subscriber.py  pyproject.toml  requirements.txt
backend/services/cyber_service/: .coverage  Dockerfile  Dockerfile.old  Makefile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/services/immunis_api_service/: .coverage  .env.example  Dockerfile  Dockerfile.old  Makefile  README.md  __init__.py  api.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/services/immunis_helper_t_service/: .coverage  Dockerfile  Dockerfile.old  Makefile  README.md  __init__.py  api.py  docker-compose.yml  helper_t_core.py  main.py  pyproject.toml  requirements.txt  requirements.txt.old
backend/services/maximus_eureka/: Dockerfile  Dockerfile.old  EUREKA_README.md  Makefile  README.md  __init__.py  api.py  api_server.py  consumer.py  coverage.json  docker-compose.yml  eureka.py  ioc_extractor.py  main.py  pattern_detector.py  playbook_generator.py  pyproject.toml  requirements.txt  requirements.txt.old  test_eureka.py
backend/services/maximus_predict/: Dockerfile  Dockerfile.backup_track2  Makefile  README.md  __init__.py  api.py  coverage.json  docker-compose.yml  main.py  ml_models.py  pyproject.toml  requirements.txt
backend/services/narrative_filter_service/: .coverage  .coverage.json  .dockerignore  Dockerfile  README.md  __init__.py  config.py  coverage.json  coverage_final.json  coverage_narrative_phase8.json  docker-compose.yml  health_api.py  kafka_consumer.py  main.py  models.py  pyproject.toml  repository.py  semantic_processor.py  strategic_consumer.py  strategic_detector.py  strategic_repository.py  verdict_repository.py  verdict_synthesizer.py
backend/services/network_monitor_service/: .coverage  Dockerfile  Dockerfile.backup_track2  Makefile  README.md  __init__.py  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/services/offensive_orchestrator_service/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPENDENCY_MAP.md  DIAGNOSTIC_REPORT.md  Dockerfile  OFFENSIVE_AI_VALIDATION_REPORT.md  QUICK_FIX_GUIDE.md  README.md  REFACTORING_PLAN.md  __init__.py  api.py  config.py  coverage.json  docker-compose.yml  hotl_system.py  integration.py  main.py  models.py  orchestrator.py  pyproject.toml  pytest.ini  requirements.txt
backend/services/osint_service/: .coverage  Dockerfile  Dockerfile.backup_track2_remaining  Makefile  README.md  __init__.py  ai_orchestrator.py  ai_orchestrator_refactored.py  ai_processor.py  ai_processor_refactored.py  (+9 more)
(+9375 files in other folders)
