[project]
name = "active_immune_core"
version = "1.0.0"
description = "MAXIMUS TIER 1 CRITICAL - Artificial Immune System Core"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "starlette>=0.47.2",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "aiohttp>=3.12.14",
    "httpx>=0.28.1",
    "aiokafka>=0.10.0",
    "redis>=5.0.1",
    "aioredis>=2.0.1",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "alembic>=1.13.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.3.0",
    "python-json-logger>=2.0.7",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.15.0",
    "pytest-respx>=0.22.0",
    "pytest-httpx>=0.35.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.13.0",
    "types-redis>=4.6.0",
    "types-aiofiles>=23.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "ANN001", "D103"]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = [".", "tests"]
python_files = ["test_*.py"]
addopts = ["--verbose", "--tb=short", "--cov=.", "--cov-report=term-missing"]
asyncio_mode = "auto"
