[project]
name = "narrative-filter-service"
version = "1.0.0"
description = "HUB-AI Cockpit Soberano - Filtro de Narrativas Multi-Agente (3 Camadas)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "aiokafka>=0.11.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "transformers>=4.40.0",
    "sentence-transformers>=2.7.0",
    "torch>=2.3.0",
    "networkx>=3.3",
    "scipy>=1.13.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.13.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "ANN001", "D103"]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = [".", "tests"]
python_files = ["test_*.py"]
addopts = ["--verbose", "--tb=short", "--cov=.", "--cov-report=term-missing", "--cov-fail-under=95", "--cov-config=pyproject.toml"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/kafka_consumer.py",  # Integration test only - requires running Kafka
    "*/strategic_consumer.py",  # Integration test only - requires running Kafka
    "*/__init__.py",  # Package init files
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["migrations/", "tests/"]

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true
