[project]
name = "osint_service"
version = "1.0.0"
description = "MAXIMUS TIER 2 Service - Important Operations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    # Phase 3: Production hardening dependencies
    "tenacity>=8.5.0",
    "prometheus-client>=0.21.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    # SocialMediaScraper dependencies
    "tweepy>=4.14.0",
    # ImageAnalyzer dependencies
    "pillow>=10.0.0",
    "imagehash>=4.3.0",
    # DiscordBot dependencies
    "discord.py>=2.3.0",
    # Web scraping dependencies
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # AI APIs
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
    # DEEP SEARCH dependencies
    "dnspython>=2.4.0",       # DNS/MX validation
    "email-validator>=2.1.0",  # Email validation
    "pwnedpasswords>=2.0.0",   # HIBP integration
    "python-whois>=0.8.0",     # Domain analysis
    "phonenumbers>=8.13.0",    # Phone validation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-vcr>=1.0.2",
    "ruff>=0.13.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "ANN001", "D103"]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = [".", "tests"]
python_files = ["test_*.py"]
addopts = ["--verbose", "--tb=short", "--cov=.", "--cov-report=term-missing"]
asyncio_mode = "auto"
